--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
-.DS_Store
-/.idea
-/l.iml
-/build
-/.gradle
-/local.properties
+# maven
+target
+
+# gradle
+.gradle
+build
+gradle.properties
+
+# idea
+.idea
+*.iml
+*.ipr
+*.iws
+
+# eclipse
+.classpath
+.project
+.settings
+bin
+
+# mac
+*.DS_Store
